--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<input class="input" type="email" name="email" placeholder="Your best email&hellip;">
 								</div>
 								<div class="control">
-									<a class="button button-primary button-block" href="#">Gas</a>
+									<a class="button button-primary button-block" href="login/index.html">Gas</a>
 								</div>
 							</div>
 						</div>
